--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>ToDoList</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
         .navbar-brand > img {
@@ -88,8 +88,8 @@
 <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
 <!-- 加载vue -->
-<script src="node_modules/vue/dist/vue.js"></script>
-<script src="index.js"></script>
+<script src="./node_modules/vue/dist/vue.js"></script>
+<script src="./index.js"></script>
 </body>
 </html>
 <!--
