--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,20 +11,23 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <style>
-        .navbar-brand > img {
+        .navbar-brand>img {
             display: inline-block;
         }
-        .input-group{
+
+        .input-group {
             margin: 10px 0px;
         }
-        .del{
-           text-decoration: line-through ;
+
+        .del {
+            text-decoration: line-through;
             color: darkgray;
         }
     </style>
 </head>
+
 <body>
-<!--导航条-->
+    <!--导航条-->
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -34,86 +38,96 @@
             </div>
         </div>
     </nav>
-<!--面板-->
-<div id="app">
-    <div class="container">
-        <template>
-            <div class="row">
-                <div class="col-md-8 col-md-offset-2">
-                    <h3 class="text-danger">亲～ ^_^ 您现在还有 {{count}} 件事情未完成哦～</h3>
-                    <!-- 输入框及添加按钮 -->
-                    <div class="input-group">
-                        <input type="text" class="form-control" placeholder="您有什么事情没有做吗？" v-model="title" @keyup.enter="add">
-                        <span class="input-group-btn">
-                            <button class="btn btn-success" type="button" @click="add">添加</button>
-                        </span>
-                    </div>
-                    <div class="alert alert-danger" v-show="flag" role="alert">你没有添加任务哦～</div>
-
-                    <!-- 面板title -->
-                    <div class="panel panel-success">
-                        <div class="panel-heading">
-                            <h3 class="panel-title">&nbsp;待办事项</h3>
+    <!--面板-->
+    <div id="app">
+        <div class="container">
+            <template>
+                <div class="row">
+                    <div class="col-md-8 col-md-offset-2">
+                        <h3 class="text-danger">亲～ ^_^ 您现在还有 {{count}} 件事情未完成哦～</h3>
+                        <!-- 输入框及添加按钮 -->
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="您有什么事情没有做吗？" v-model="title"
+                                @keyup.enter="add">
+                            <span class="input-group-btn">
+                                <button class="btn btn-success" type="button" @click="add">添加</button>
+                            </span>
                         </div>
-                        <!-- 面板body -->
-                        <div class="panel-body">
-                            <!-- 列表 -->
-                            <ul class="list-group">
-                                <li class="list-group-item" v-for="(title, index) in filterHash" @dblclick="remember(title)">
-                                    <!-- 如果isSelected为true，则del生效  -->
-                                    <span :class="{del:title.isSelected}" v-show="cur!=title">
-                                    <input type="checkbox"  v-model="title.isSelected"> &nbsp;{{title.content}}
-                                </span>
-                                    <!-- 双击时显示，用于修改内容 -->
-                                    <!-- v-focus为自定义指令 -->
-                                    <input type="text" v-show="cur==title" v-model="title.content" @keyup.enter="cancel" @blur="cancel" v-focus="cur==title">
+                        <div class="alert alert-danger" v-show="flag" role="alert">你没有添加任务哦～</div>
 
-                                    <button type="button" class="btn btn-danger btn-xs pull-right"  data-toggle="modal" data-target=".bs-example-modal-sm">
-                                        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                                    </button>
-                                    
-                                </li>
-                            </ul>
-                            <ul class="nav nav-pills">
-                                <li role="presentation" :class="{active:this.hash=='all'}"><a href="#/all">全部事项</a></li>
-                                <li role="presentation" :class="{active:this.hash=='finish'}"><a href="#/finish">已完成</a></li>
-                                <li role="presentation" :class="{active:this.hash=='unfinish'}"><a href="#/unfinish">未完成</a></li>
-                            </ul>
+                        <!-- 面板title -->
+                        <div class="panel panel-success">
+                            <div class="panel-heading">
+                                <h3 class="panel-title">&nbsp;待办事项</h3>
+                            </div>
+                            <!-- 面板body -->
+                            <div class="panel-body">
+                                <!-- 列表 -->
+                                <ul class="list-group">
+                                    <li class="list-group-item" v-for="(title, index) in filterHash"
+                                        @dblclick="remember(title)">
+                                        <!-- 如果isSelected为true，则del生效  -->
+                                        <span :class="{del:title.isSelected}" v-show="cur!=title">
+                                            <input type="checkbox" v-model="title.isSelected"> &nbsp;{{title.content}}
+                                        </span>
+                                        <!-- 双击时显示，用于修改内容 -->
+                                        <!-- v-focus为自定义指令 -->
+                                        <input type="text" v-show="cur==title" v-model="title.content"
+                                            @keyup.enter="cancel" @blur="cancel" v-focus="cur==title">
+
+                                        <button type="button" class="btn btn-danger btn-xs pull-right"
+                                            >
+                                            <span class="glyphicon glyphicon-trash" aria-hidden="true" @click="remove(title)"></span>
+                                        </button>
+
+                                    </li>
+                                </ul>
+                                <ul class="nav nav-pills">
+                                    <li role="presentation" :class="{active:this.hash=='all'}"><a href="#/all">全部事项</a>
+                                    </li>
+                                    <li role="presentation" :class="{active:this.hash=='finish'}"><a
+                                            href="#/finish">已完成</a></li>
+                                    <li role="presentation" :class="{active:this.hash=='unfinish'}"><a
+                                            href="#/unfinish">未完成</a></li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- 警告框 -->
-            <div class="modal fade bs-example-modal-sm" id="myModal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-                <div class="modal-dialog  modal-sm" role="document">
-                    <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title text-danger" id="myModalLabel">放弃任务</h4>
-                    </div>
-                    <div class="modal-body">主人，你确定要放弃这项任务吗？</div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">让我再想想</button>
-                        <button type="button" class="btn btn-danger"  @click="remove(title)">放弃吧</button>
-                    </div>
+            </template>
+             <!-- 警告框 -->
+            <div class="modal fade bs-example-modal-sm" id="myModal" tabindex="-1" role="dialog"
+                    aria-labelledby="mySmallModalLabel">
+                    <div class="modal-dialog  modal-sm" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                        aria-hidden="true">&times;</span></button>
+                                <h4 class="modal-title text-danger" id="myModalLabel">放弃任务</h4>
+                            </div>
+                            <div class="modal-body">主人，你确定要放弃这项任务吗？</div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-default" data-dismiss="modal">让我再想想</button>
+                                <button type="button" class="btn btn-danger " id="del-date"
+                                    @click="remove(title)">放弃吧</button>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
-
-        </template>
+        </div>
     </div>
-</div>
 
 
 
-<!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-<script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-<!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-<!-- 加载vue -->
-<script src="node_modules/vue/dist/vue.js"></script>
-<script src="index.js"></script>
+    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+    <!-- 加载vue -->
+    <script src="node_modules/vue/dist/vue.js"></script>
+    <script src="index.js"></script>
 </body>
+
 </html>
 <!--
     1、将数据循环到页面上
