--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,9 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>ToDoList</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-    <style>
-        .navbar-brand>img {
-            display: inline-block;
-        }
-
-        .input-group {
-            margin: 10px 0px;
-        }
-
-        .del {
-            text-decoration: line-through;
-            color: darkgray;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -32,17 +19,30 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="#">
-                    <img src="favicon.ico" alt="" class="img-circle" style="width: 25px; height: 25px;">
+                    <img src="./img/公众号LOGO.jpg" alt="" class="img-circle ration">
                     <span class="text-primary">ToDoList</span>
                 </a>
             </div>
         </div>
     </nav>
+
+    <!-- 菜单栏 -->
+    <nav class="left">
+        <ul class="list-group">
+            <a href="index.html" class="list-group-item list-group-item-info"><span class="glyphicon glyphicon-home">&nbsp;ToDoList</span></a>
+            <a href="https://moxuan.xyz" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-edit">&nbsp;墨轩技术糖</span></a>
+            <a href="#" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-user">&nbsp;关于我</span></a>
+        </ul>
+    </nav>
+
+    <!-- 幕布 -->
+    <div class="mask"></div>
+
     <!--面板-->
     <div id="app">
         <div class="container">
             <template>
-                <div class="row">
+                <div class="row row-same-height">
                     <div class="col-md-8 col-md-offset-2">
                         <h3 class="text-danger">亲～ ^_^ 您现在还有 {{count}} 件事情未完成哦～</h3>
                         <!-- 输入框及添加按钮 -->
@@ -53,7 +53,7 @@
                                 <button class="btn btn-success" type="button" @click="add">添加</button>
                             </span>
                         </div>
-                        <div class="alert alert-danger" v-show="flag" role="alert">你没有添加任务哦～</div>
+                        <div class="alert alert-danger clear" v-show="flag" role="alert">你没有添加任务哦～</div>
 
                         <!-- 面板title -->
                         <div class="panel panel-success">
@@ -95,36 +95,28 @@
                     </div>
                 </div>
             </template>
-             <!-- 警告框 -->
-            <div class="modal fade bs-example-modal-sm" id="myModal" tabindex="-1" role="dialog"
-                    aria-labelledby="mySmallModalLabel">
-                    <div class="modal-dialog  modal-sm" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                                        aria-hidden="true">&times;</span></button>
-                                <h4 class="modal-title text-danger" id="myModalLabel">放弃任务</h4>
-                            </div>
-                            <div class="modal-body">主人，你确定要放弃这项任务吗？</div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">让我再想想</button>
-                                <button type="button" class="btn btn-danger " id="del-date"
-                                    @click="remove(title)">放弃吧</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
         </div>
     </div>
 
-
+    <!-- 页脚 -->
+    <footer>
+        <div class="copy">
+           <i class="glyphicon glyphicon-copyright-mark">2019</i>
+           <span>&nbsp;by<a href="#"> 墨轩啊</a></span>
+        </div>
+        <div class="info">
+            <a href="#"><i class="iconfont">&#xe7f9;</i>&nbsp;E-Mail</a>
+            <a href="#"><i class="iconfont">&#xe600;<span>&nbsp;moxuan-jst</span></i></a>
+            <a href="#"><i class="iconfont">&#xe65e;</i><span>&nbsp;墨轩啊</span></a>
+        </div>
+    </footer>
 
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
     <!-- 加载vue -->
-    <script src="node_modules/vue/dist/vue.js"></script>
+    <script src="../node_modules/vue/dist/vue.js"></script>
     <script src="index.js"></script>
 </body>
 
@@ -135,4 +127,6 @@
     3、删除功能
     4、计算当前没有被选中的个数
     5、双击时可修改内容
+    6、头像可旋转
+    7、下拉菜单
 -->
