--- a/text.html
+++ b/text.html
@@ -1,19 +1,28 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN""http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="zh_CN">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>js确认删除对话框</title>
-<script language="javascript">
-function delcfm() {
-if (!confirm("确认要删除？")) {
-window.event.returnValue = false;
-}
-}
-</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    <style>
+        .ration{
+            width: 100px;
+            height: 100px;
+            border-radius: 50%;
+            
+        }
+        .ration:hover{
+            animation: rations 2s linear;
+        }
+        @keyframes rations {
+                0%{
+                    transform: rotate(0deg);
+                }
+            }
+    </style>
 </head>
 <body>
-<p>
-<a href="http://www.baidu.com/" onClick="delcfm()">删除</a></p>
-<p>代码说明：单击删除的超链接后将执行delcfm()函数，在对话框中，如果点击“确定”，函数将返回true值，就将页面转到<a>标签中的链接页面执行删除的页面；如果点击“取消”，函数将返回false值，<a>标签将不转到执行删除的页面。</p>
+    <img class="ration" src="/src/img/公众号LOGO.jpg">
 </body>
 </html>
