--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>ToDoList</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./src/style.css">
 </head>
 
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-inverse">
         <div class="container-fluid">
             <div class="navbar-header">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="javascript:void(0);">
                     <img src="./src/img/公众号LOGO.jpg" alt="" class="img-circle ration">
                     <span class="text-primary">ToDoList</span>
                 </a>
@@ -27,6 +27,7 @@
     </nav>
 
     <!-- 菜单栏 -->
+    <div class="san"></div>
     <nav class="left">
         <ul class="list-group">
             <a href="index.html" class="list-group-item list-group-item-info"><span class="glyphicon glyphicon-home">&nbsp;ToDoList</span></a>
