设置菜单栏高度和宽度

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- 菜单栏 -->
     <div class="san"></div>
     <nav class="left">
-        <ul class="list-group my-list">
+        <ul class="list-group" id="my-list">
             <a href="index.html" class="list-group-item list-group-item-info"><span class="glyphicon glyphicon-home">&nbsp;ToDoList</span></a>
             <a href="https://moxuan.xyz" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-edit">&nbsp;墨轩技术糖</span></a>
             <a href="#" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-user">&nbsp;关于我</span></a>
