已将所有文件压缩,修改readme文件

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
     <title>ToDoList</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./css/style.min.css">
+    <link rel="shortcut icon" href="./build/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./build/css/style.min.css">
 </head>
 
 <body>
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="javascript:void(0);">
-                    <img src="./img/公众号LOGO.min.jpg" alt="" class="img-circle ration">
+                    <img src="./build/img/公众号LOGO.min.jpg" alt="" class="img-circle ration">
                     <span class="text-primary">ToDoList</span>
                 </a>
             </div>
@@ -30,9 +30,9 @@
     <div class="san"></div>
     <nav class="left">
         <ul class="list-group" id="my-list">
-            <a href="index.html" class="list-group-item list-group-item-info"><span class="glyphicon glyphicon-home">&nbsp;ToDoList</span></a>
+            <a href="./index.html" class="list-group-item list-group-item-info"><span class="glyphicon glyphicon-home">&nbsp;ToDoList</span></a>
             <a href="https://moxuan.xyz" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-edit">&nbsp;墨轩技术糖</span></a>
-            <a href="#" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-user">&nbsp;关于我</span></a>
+            <a href="https://moxuan.xyz/about/" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-user">&nbsp;关于我</span></a>
         </ul>
     </nav>
 
@@ -119,8 +119,8 @@
     <!-- 加载vue -->
     <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
 
-    <script src="./js/index.min.js"></script>
-    <script src="./js/caidan.min.js"></script>
+    <script src="./build/js/index.min.js"></script>
+    <script src="./build/js/caidan.min.js"></script>
 
 </body>
 
