--- a/src/index.html
+++ b/src/index.html
@@ -103,7 +103,7 @@
     <footer>
         <div class="copy">
            <i class="glyphicon glyphicon-copyright-mark">2019</i>
-           <span>&nbsp;by<a href="https://moxuan.xyz"> 墨轩啊</a></span>
+           <span>&nbsp;by<a href="https://www.moxuan.xyz"> 墨轩啊</a></span>
         </div>
         <div class="info">
             <a href="moxuan-jst@foxmail.com"><i class="iconfont">&#xe7f9;</i><span>&nbsp;E-Mail:moxuan-jst@foxmail.com</span></a>
