--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <title>ToDoList</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="shortcut icon" href="./build/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./build/css/style.min.css">
 </head>
@@ -113,11 +113,11 @@
     </footer>
 
     <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
+    <script src="../node_modules/jquery/dist/jquery.js"></script>
     <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
     <!-- 加载vue -->
-    <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
+    <script src="../node_modules/vue/dist/vue.js"></script>
 
     <script src="./build/js/index.min.js"></script>
     <script src="./build/js/caidan.min.js"></script>
