修改底部链接

--- a/src/index.html
+++ b/src/index.html
@@ -103,12 +103,12 @@
     <footer>
         <div class="copy">
            <i class="glyphicon glyphicon-copyright-mark">2019</i>
-           <span>&nbsp;by<a href="https://www.moxuan.xyz"> 墨轩啊</a></span>
+           <span>&nbsp;by<a href="https://www.moxuan.xyz" target="_blank"> 墨轩啊</a></span>
         </div>
         <div class="info">
-            <a href="moxuan-jst@foxmail.com"><i class="iconfont">&#xe7f9;</i><span>&nbsp;E-Mail:moxuan-jst@foxmail.com</span></a>
-            <a href="https://github.com/moxuan-jst"><i class="iconfont">&#xe600;<span>&nbsp;moxuan-jst</span></i></a>
-            <a href="https://weibo.com/u/2690290777"><i class="iconfont">&#xe65e;</i><span>&nbsp;墨轩啊</span></a>
+            <a href="moxuan-jst@foxmail.com" target="_blank"><i class="iconfont">&#xe7f9;</i><span>&nbsp;E-Mail:moxuan-jst@foxmail.com</span></a>
+            <a href="https://github.com/moxuan-jst" target="_blank"><i class="iconfont">&#xe600;<span>&nbsp;moxuan-jst</span></i></a>
+            <a href="https://weibo.com/u/2690290777" target="_blank"><i class="iconfont">&#xe65e;</i><span>&nbsp;墨轩啊</span></a>
         </div>
     </footer>
 
