--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <div class="container-fluid">
             <div class="navbar-header">
                 <a class="navbar-brand" href="javascript:void(0);">
-                    <img src="./build/img/公众号LOGO.min.jpg" alt="" class="img-circle ration">
+                    <img src="./build/img/公众号LOGO.min." alt="" class="img-circle ration">
                     <span class="text-primary">ToDoList</span>
                 </a>
             </div>
@@ -31,8 +31,8 @@
     <nav class="left">
         <ul class="list-group" id="my-list">
             <a href="./index.html" class="list-group-item list-group-item-info"><span class="glyphicon glyphicon-home">&nbsp;ToDoList</span></a>
-            <a href="https://moxuan.xyz" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-edit">&nbsp;墨轩技术糖</span></a>
-            <a href="https://moxuan.xyz/about/" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-user">&nbsp;关于我</span></a>
+            <a href="https://www.moxuan.xyz" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-edit">&nbsp;墨轩技术糖</span></a>
+            <a href="https://www.moxuan.xyz/about/" class="list-group-item list-group-item-info" target="_blank"><span class="glyphicon glyphicon-user">&nbsp;关于我</span></a>
         </ul>
     </nav>
 
